--- a/IntroductionMVC5.PDFGenerator/RustiviaSolutions.PDFGenerator.csproj
+++ b/IntroductionMVC5.PDFGenerator/RustiviaSolutions.PDFGenerator.csproj
@@ -34,8 +34,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="itextsharp">
-      <HintPath>C:\Users\nntshivhase.METMOM\Downloads\ASP_MVC3_PDF_Reporting_src\ASP_MVC3_PDF_Reporting_src\PdfReportGenerator\bin\Release\itextsharp.dll</HintPath>
+    <Reference Include="itextsharp, Version=5.5.13.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>..\packages\iTextSharp.5.5.13\lib\itextsharp.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
