--- a/IntroductionMVC5.Data/packages.config
+++ b/IntroductionMVC5.Data/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="DataAnnotationsExtensions" version="1.1.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
+  <package id="iTextSharp" version="5.5.13" targetFramework="net45" />
 </packages>
