--- a/IntroductionMVC5.Data/packages.config
+++ b/IntroductionMVC5.Data/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DataAnnotationsExtensions" version="1.1.0.0" targetFramework="net45" />
-  <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
+  <package id="DataAnnotationsExtensions" version="5.0.1.27" targetFramework="net45" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
+  <package id="iTextSharp" version="5.5.13" targetFramework="net45" />
 </packages>
