--- a/IntroductionMVC5/IntroductionMVC5.Web.csproj
+++ b/IntroductionMVC5/IntroductionMVC5.Web.csproj
@@ -459,6 +459,7 @@
     <Content Include="Views\Arslo\EditCustomerDetails.cshtml" />
     <Content Include="Views\Reports\MonthlyReport.cshtml" />
     <Content Include="Views\Arslo\DrawDownProfoma.cshtml" />
+    <Content Include="Views\Arslo\EditInvoice.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
