--- a/IntroductionMVC5/Web.config
+++ b/IntroductionMVC5/Web.config
@@ -15,6 +15,8 @@
   </connectionStrings>
   <appSettings>
     <add key="DefaultPaginationSize" value="50" />
+    <add key="ProfomaCount" value="57" />
+    <add key="InvoiceCount" value="57" />
     <add key="ConnectionStringName" value="IntroductionMVC" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
